# wixra

./: CMakeLists.txt  gui.c  main.c  storage_device.c  style.css  wixra_window.glade
include/: gui.h  main.h  storage_device.h
